updates in poms and README.md